Security Hotspot issue changes